--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,7 @@
   <hgroup>
     <h1>
       <a href="{{ site.url }}" title="{{ site.name }}">
-        <span>S</span>
-        <span>catter</span>
+        <span>S</span><span>catter</span>
       </a>
     </h1>
   </hgroup>
