Playing with the logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <hgroup>
     <h1>
       <a href="{{ site.url }}" title="{{ site.name }}">
-        <span>S</span><span>catter</span>
+        {{ site.name }}
       </a>
     </h1>
   </hgroup>
