--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,10 +23,8 @@
     <!-- Google fonts -->
     <link href='http://fonts.googleapis.com/css?family=Lato:400,100,300,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
     
-    
-     <!-- Picturefill Responsive Images -->
-    <script type="text/javascript" src="{{ site.url }}/assets/matchmedia.js"></script>
-    <script type="text/javascript" src="{{ site.url }}/assets/picturefill.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="{{ site.url }}/assets/jquery.init.js" type="text/javascript"></script>
     
   </head>
   
