--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,10 @@
     	<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
     <![endif]-->
     
+    
+    <!-- CSS animations -->
+    <link href="{{ site.url }}/assets/animate.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    
     <!-- Google fonts -->
     <link href='http://fonts.googleapis.com/css?family=Lato:400,100,300,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
     
