Business layout reset

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,4 +4,21 @@
       {{ site.name }}
     </a>
   </h1>
+  
+  
+  <form>
+    <input type="submit" value="Sign up now!">
+    <input type="submit" value="Login">
+    <a href="{{ site.url }}/business" title="Try it for free">Try it for free!</a>
+  </form>
+  
+  
+  <nav>
+    <ul>
+      <li class="active">&nbsp;</li>
+      <li>&nbsp;</li>
+      <li>&nbsp;</li>
+    </ul>
+  </nav>
+  
 </header>
