--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,7 +28,9 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:400,100,300,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
     
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js" type="text/javascript"></script>
     <script src="{{ site.url }}/assets/jquery.init.js" type="text/javascript"></script>
+    
     
   </head>
   
