Business slides content updated

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,7 @@
       <li class="active">&nbsp;</li>
       <li>&nbsp;</li>
       <li>&nbsp;</li>
+      <li>&nbsp;</li>
     </ul>
   </nav>
   
