Starting to make it fully responsive and finalize

--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -168,7 +168,7 @@ body {
       
       section {
         &#intro {
-          background-image: url(http://metamn.github.io/scatter/assets/smartphone-with-scatter.png);
+          background-image: url(/assets/smartphone-with-scatter.png);
           
           article {
             header {
@@ -216,10 +216,10 @@ body {
         
         
         &#features {
-          background-image: url(http://metamn.github.io/scatter/assets/laptop-with-scatter.png);
+          background-image: url(/assets/laptop-with-scatter.png);
           
           @include tablet-and-below {
-            background-image: url(http://metamn.github.io/scatter/assets/tablet-with-scatter.png);
+            background-image: url(/assets/tablet-with-scatter.png);
           }
           
           article {
@@ -326,7 +326,7 @@ body {
         
         
         &#testimonials {
-          background-image: url(http://metamn.github.io/scatter/assets/tablet-with-scatter.png);
+          background-image: url/assets/tablet-with-scatter.png);
           
           @include tablet-and-below {
             margin-bottom: $pad*2;
@@ -492,7 +492,7 @@ body.business {
     #content { 
   
       section {
-        background-image: url(http://metamn.github.io/scatter/assets/tablet-with-scatter.png);
+        background-image: url(/assets/tablet-with-scatter.png);
         
         article {
           header {
