--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,6 @@
 <header id="header">
-  <h1>
-    <a href="{{ site.url }}" title="{{ site.name }}">
-      {{ site.name }}
-    </a>
-  </h1>
+  
+  {% include logo.html %}
  
   <nav>
     <ul>
