--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     <title>{{ page.title | strip_html }}</title> 
     
     <!-- Compass with SASS -->
-  	<link href="{{ site.url }}/assets/screen.css?201308014a" media="screen, projection" rel="stylesheet" type="text/css" />
+  	<link href="{{ site.url }}/assets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 		<link href="{{ site.url }}/assets/print.css" media="print" rel="stylesheet" type="text/css" />
 		<!--[if lt IE 9]>
 			<link href="{{ site.url }}/assets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
