--- a/_includes/nav-dashboard.html
+++ b/_includes/nav-dashboard.html
@@ -1,10 +1,30 @@
 <nav id="dashboard">
   <ul>
-    <li class="active">Compose</li>
-    <li>Offers</li>
-    <li>Statistics</li>
-    <li>Inbox</li>
-    <li>Account</li>
+    <li class="compose">
+      <a href="{{ site.url }}/compose" title="Compose">
+      <span><img src="{{ site.url }}/assets/dashboard.png" alt="Compose"/></span><span>Compose</span>
+      </a>
+    </li>
+    <li class="my-scatters">
+      <a href="{{ site.url }}/my-scatters" title="My Scatters">
+      <span><img src="{{ site.url }}/assets/dashboard.png" alt="Compose"/></span><span>My Scatters</span>
+      </a>
+    </li>
+    <li class="statistics">
+      <a href="{{ site.url }}/statistics" title="Statistics">
+        <span><img src="{{ site.url }}/assets/dashboard.png" alt="Compose"/></span><span>Statistics</span>
+      </a>
+    </li>
+    <li class="inbox">
+      <a href="{{ site.url }}/inbox" title="Inbox">
+        <span><img src="{{ site.url }}/assets/dashboard.png" alt="Compose"/></span><span>Inbox</span>
+      </a>
+    </li>
+    <li class="account">
+      <a href="{{ site.url }}/account" title="Account">
+        <span><img src="{{ site.url }}/assets/dashboard.png" alt="Compose"/></span><span>Account</span>
+      </a>
+    </li>
   </ul>
   
   <div id="arrows">
