--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,6 +1,6 @@
 <form>
   <input type="submit" value="Learn more">
-  <input type="submit" value="Enter now" formaction="http://scatteralpha.appspot.com/">
+  <input type="submit" value="Enter now" formaction="/main" formmethod="post">
   <p>
     <a href="{{ site.url }}/business" title="I'm a business owner">I'm a business owner &rarr;</a>
   </p>
