--- a/_includes/form-business.html
+++ b/_includes/form-business.html
@@ -1,7 +1,7 @@
-<form>
-  <button formaction="/signup" formmethod="post">Sign up now!<span>Try it for free</span></button>
-  <button formaction="/login" formmethod="post">Login</button>
+<div id="form">
+  <button onclick="location.href='/signup';">Sign up now!<span>Try it for free</span></button>
+  <button onclick="location.href='/login';">Login</button>
   <p>
     <a href="{{ site.url }}/pricing" title="Plans & Pricing">Plans & Pricing &rarr;</a>
   </p>
-</form> 
+</div> 
