--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,7 +1,7 @@
-<form>
+<div id="form">
   <input type="submit" value="Learn more">
-  <input type="submit" value="Enter now" formaction="/main" formmethod="post">
+  <input type="submit" value="Enter now" onclick="location.href='/main';">
   <p>
     <a href="{{ site.url }}/business" title="I'm a business owner">I'm a business owner &rarr;</a>
   </p>
-</form>
+</div>
