Started to work on the main page

--- a/_includes/card.html
+++ b/_includes/card.html
@@ -2,10 +2,10 @@
   <div class="cardcategory">Accounting</div>
 
   <div class="userinfolink">
-    <h3 class="username">Avantika Clothing</h3>
+    <h3 class="username">Oxygen Eco Friendly Drycleaning</h3>
   </div>
   
-  <h3 class="messagelocation">Sector 3, Bucharest</h3>
+  <h3 class="messagelocation">Deen Dayal Upadhaya Marg, Barakhamba, New Delhi</h3>
 
   <div class="labelcontainer">
     <a href="/login?q=4">
@@ -17,7 +17,7 @@
 
   <div class="separator"></div>
   
-  <p class="message">testing .....</p>
+  <p class="message">Join us for Aarey Forest Half Marathon. Dt:16th Jun Time:6.00a.m. Assembly Point:Toll Naka, Off the Western Expr. Highway, Goregaon East</p>
 
   <div class="votebutton">
     <a href="/login?q=2">
