--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,6 +1,6 @@
 <div id="form">
   <input type="submit" value="Learn more">
-  <input type="submit" value="Enter now" onclick="location.href='/main';">
+  <input type="submit" value="Enter now" onclick="location.href='{{ site.url }}/main';">
   <p>
     <a href="{{ site.url }}/business" title="I'm a business owner">I'm a business owner &rarr;</a>
   </p>
