--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,48 +1,25 @@
 <article class="card">
-  <div class="cardcategory">Accounting</div>
+  <div class="cardcategory">
+    <a href="{{ site.url }}/" title="All categories">
+      <img src="http://i.istockimg.com/file_thumbview_approve/1446023/2/stock-photo-1446023-recipe-card-dividers.jpg" alt="All categories">
+      <p>Category</p>
+    </a>
+  </div>
 
-  <div class="userinfolink">
+  <div class="usercontainer">
     <h3 class="username">Oxygen Eco Friendly Drycleaning</h3>
+    <h3 class="messagelocation">Deen Dayal Upadhaya Marg, Barakhamba, New Delhi</h3>
   </div>
   
-  <h3 class="messagelocation">Deen Dayal Upadhaya Marg, Barakhamba, New Delhi</h3>
-
-  <div class="labelcontainer">
-    <a href="/login?q=4">
-      <div class="l_followbtn">Follow</div>
-    </a>
-  
+  <div class="messagecontainer">
+    <div class="distance">12.3 Km</div>
     <div class="timeremaining">6234h : 42m left</div>
-  </div>
-
-  <div class="separator"></div>
-  
-  <p class="message">Join us for Aarey Forest Half Marathon. Dt:16th Jun Time:6.00a.m. Assembly Point:Toll Naka, Off the Western Expr. Highway, Goregaon East</p>
-
-  <div class="votebutton">
-    <a href="/login?q=2">
-      <div class="l_upvotebtn">Upvote This</div>
-    </a>
-    <a href="/login?q=3">
-      <div class="l_downvotebtn">Downvote This</div>
-    </a>
-  </div>
-
-  <div class="actionbuttons">
-    <a href="#"><div class="actionlink setalertlink">Set Alert</div></a>
-    <a href="#"><div class="actionlink sharelink">Share</div></a>
-    <a href="#"><div class="actionlink showlink">Show Similar</div></a>
-  </div>
-      
-  <div class="flagbutton">
-    <a href="/login?q=1">
-      <div class="actionlink reportlink"><p>Flag As Inappropriate</p></div>
-    </a>
+    <p class="message">Join us for Aarey Forest Half Marathon. Dt:16th Jun Time:6.00a.m. Assembly Point:Toll Naka, Off the Western Expr. Highway, Goregaon East</p>
   </div>
 
   <div class="cardfooter">
-    <div class="distance">0.0 Km</div>
-      <a href="/login?q=5"><div class="l_chat"></div></a>
-      <a href="#"><div class="mapicon" lat="44.4325" lon="26.103889">Go To Map</div></a>
+    <a class="l_followbtn" href="/login?q=4">Follow</a>
+    <a class="l_chat" href="/login?q=5"><img src="{{ site.url }}/assets/chat.png" alt="Chat" /></a>
+    <a class="mapicon" href="#" lat="44.4325" lon="26.103889"><img src="{{ site.url }}/assets/location.png" alt="Map" /></a>
   </div>
 </article>
