--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -11,6 +11,8 @@
 </div>
 
 
+<!-- jQuery Masonry -->
+<script src="{{ site.url }}/assets/masonry.pkgd.min.js" type="text/javascript"></script>
 <!-- jQuery code -->
 <script src="{{ site.url }}/assets/jquery.main.js" type="text/javascript"></script>
 </body>
