--- a/_includes/card-footer.html
+++ b/_includes/card-footer.html
@@ -1,3 +1,7 @@
+<div class="companyphoto">
+  <img src="http://i.istockimg.com/file_thumbview_approve/1446023/2/stock-photo-1446023-recipe-card-dividers.jpg" alt="All categories">
+</div>
+
 <div class="cardfooter">
   <a class="l_followbtn {{ include.klass }}" href="/login?q=4">Follow</a>
   <a class="l_chat" href="/login?q=5"><img src="{{ site.url }}/assets/chat.png" alt="Chat" /></a>
