Browse categories added

--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -10,17 +10,14 @@
 
 <nav id="explore">
   <ul>
-    <li>
-      <a href="">Explore my neighborhood</a>
+    <li id="location">
+      Explore my neighborhood / Set your precise location
     </li>
-    <li>
-      <a href="">Set your precise location</a>
+    <li id="browse-categories">
+      Browse categories
     </li>
-    <li>
-      <a href="">Browse categories</a>
-    </li>
-    <li>
-      <a href="">Nearest to me</a>
+    <li id="filter">
+      Nearest to me
     </li>
     <li>
       <input type="text" placeholder="Search">
