Final touches on card design

--- a/_includes/card-sendmessage.html
+++ b/_includes/card-sendmessage.html
@@ -1,3 +1,11 @@
+<div class="messagephoto-icon">
+  <img src="{{ site.url }}/assets/camera.png" alt="Image">
+</div>
+
+<div class="messagephoto">
+  <img src="http://i.istockimg.com/file_thumbview_approve/1446023/2/stock-photo-1446023-recipe-card-dividers.jpg" alt="Image">
+</div>
+
 <div class="sendmessage">
   <textarea>Type your message here</textarea>
   <button>Send</button>
