Working on the menu, but deploying ...

--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -11,7 +11,7 @@
 
 <nav id="explore">
   <ul>
-    <li id="location">
+    <li id="explore-location">
       Explore my neighborhood
     </li>
     <li id="browse-categories">
