Ready to make the menu mobile

--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -7,7 +7,7 @@
       <button id="welcome">Welcome Abhijeet!</button>
       <input type="search" placeholder="Search">
       <button id="search">
-        <img src="{{ site.url }}/assets/search-white.png" alt="Search">
+        <img src="{{ site.url }}/assets/search.png" alt="Search">
         <span>Search</span>
       </button>
     </li>
