--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -1,4 +1,4 @@
-<nav id="main">
+<nav id="main" class="desktop">
   <ul>
     <li>{% include logo.html %}</li>
     <li>
@@ -14,8 +14,36 @@
   </ul>
 </nav>
 
-<nav id="explore">
+<nav id="explore" class="desktop">
   <ul>
+    <li id="explore-location">
+      Explore my neighborhood
+    </li>
+    <li id="browse-categories">
+      Browse categories
+    </li>
+    <li id="filter">
+      <span class="active">Nearest to me</span>
+      <span>Popular in my area</span>
+      <span>Expiring soon</span>
+      <span>Latest in my area</span>
+    </li>
+  </ul>
+</nav>
+
+<nav id="mobile" class="mobile">
+  <ul>
+    <li>{% include logo.html %}</li>
+    <li>
+      <button id="signup">Sign up</button>
+      <button id="login">Login</button>
+      <button id="welcome">Welcome Abhijeet!</button>
+      <input type="search" placeholder="Search">
+      <button id="search">
+        <img src="{{ site.url }}/assets/search.png" alt="Search">
+        <span>Search</span>
+      </button>
+    </li>
     <li id="explore-location">
       Explore my neighborhood
     </li>
