It seems all done, next to fix the masonry

--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -23,10 +23,10 @@
       Browse categories
     </li>
     <li id="filter">
-      <span class="active">Nearest to me</span>
-      <span>Popular in my area</span>
+      <span class="active">Nearest</span>
+      <span>Latest</span>
       <span>Expiring soon</span>
-      <span>Latest in my area</span>
+      <span>Exclusive</span>
     </li>
   </ul>
 </nav>
@@ -54,10 +54,10 @@
       Browse categories
     </li>
     <li id="filter">
-      <span class="active">Nearest to me</span>
-      <span>Popular in my area</span>
+      <span class="active">Nearest</span>
+      <span>Latest</span>
       <span>Expiring soon</span>
-      <span>Latest in my area</span>
+      <span>Exclusive</span>
     </li>
   </ul>
 </nav>
