--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -47,6 +47,7 @@
   </ul>
   
   <ul>
+    <li id="switch" >Explore, browse, filter</li>
     <li id="explore-location">
       Explore my neighborhood
     </li>
